--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
 	display: flex;
 	flex-flow: row wrap;
 	height: 100%;
-	max-width: 1200px;
+	max-width: 900px;
 	margin: 0 auto;
 	align-items: center;
 	justify-content: space-around;
@@ -20,4 +20,5 @@ body, html {
 
 .container > div {
   width: 300px;
+  padding: 50px;
 }
